--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Cafe de la Geisha</title>
 </head>
 <body>
+  <!-- principio de header -->
     <header class="header">
         <div class="menu container">
           <a href="#" class="logo"><img src="images/icon.ico" alt="" /></a>
@@ -58,6 +59,35 @@
           </div>
         </div>
       </header>
-
+      <!-- fin del header -->
+      <!-- principio de welcome -->
+      <section id="inicio" class="welcome item">
+        <div class="welcome-1"></div>
+        <div class="welcome-2">
+          <h2>Bienvenidos a cafe de la Geisha</h2>
+          <p class="b1">
+            La cafetería, fundada en 1985, ha sido un referente en la comunidad
+            desde sus inicios. Con una pasión por el café de calidad, han buscado
+            los mejores granos de café de origen en todo el mundo. A lo largo de
+            los años, han mantenido su compromiso con la excelencia y la
+            innovación, adaptándose a las tendencias actuales y brindando una
+            experiencia inigualable a sus clientes.
+          </p>
+          <p>
+            La cafetería se destaca por su gran café y postres debido a su
+            dedicación a la calidad y la atención a los detalles. Para el café,
+            seleccionan cuidadosamente granos de alta calidad y los tuestan con
+            precisión para resaltar su sabor único. Además, los baristas expertos
+            preparan cada taza con pasión y habilidad. En cuanto a los postres, se
+            elaboran con ingredientes frescos y se presentan de manera artística,
+            brindando sabores exquisitos que complementan perfectamente la
+            experiencia del café. La combinación de café excepcional y postres
+            deliciosos hace que la cafetería se destaque y sea inolvidable.
+          </p>
+  
+          <!-- <a href="#" class="btn-1">Informacion</a> -->
+        </div>
+      </section>
+  
 </body>
 </html>
