--- a/index.html
+++ b/index.html
@@ -88,6 +88,63 @@
           <!-- <a href="#" class="btn-1">Informacion</a> -->
         </div>
       </section>
+      <!-- fin del welcome -->
+
+      <!-- principio de servicio -->
+      <main id="servicios" class="services container item">
+        <div class="services-text">
+          <h2 class="services-h2">Nuestros servicios</h2>
+          <hr />
+          <p class="services-p">
+            Ofrecemos una amplia gama de servicios para satisfacer las necesidades
+            de sus clientes. Entre ellos se incluyen café de alta calidad,
+            variedad de bebidas calientes y frías, opciones de desayuno, almuerzo
+            y merienda, postres deliciosos, wifi gratuito, ambiente acogedor y
+            atención amigable y profesional.
+          </p>
+        </div>
+  
+        <div class="services-group">
+          <div class="services-1">
+            <img src="images/logo-cafe.png" alt="" />
+            <h3>Nuestro Cafe</h3>
+            <p class="p-services">
+              Nuestro café ha ganado reconocimiento como el mejor de la zona
+              gracias a su sabor excepcional y calidad insuperable. Cada taza es
+              cuidadosamente elaborada, seleccionando los mejores granos y
+              siguiendo métodos de preparación meticulosos. Ven y disfruta de una
+              experiencia única que te cautivará.
+            </p>
+          </div>
+  
+          <div class="services-1">
+            <img src="images/menu.png" alt="" />
+            <h3>Como armamos el menu</h3>
+            <p class="p-services">
+              La elección meticulosa de nuestro menú de cafetería se basa en la
+              búsqueda de ingredientes frescos y de alta calidad, combinados de
+              manera creativa para ofrecer una variedad de sabores y opciones que
+              satisfagan los gustos y preferencias de nuestros clientes exigentes.
+            </p>
+          
+          </div>
+  
+          <div class="services-1">
+            <img src="images/cafetera.png" alt="" />
+            <h3>Maquinarias de primera</h3>
+            <p class="p-services">
+              Usamos cafeteras profeccionales que utiliza tecnología avanzada para
+              preparar un café excepcional. Controla la temperatura y presión del
+              agua de manera precisa, ofrece opciones de molienda ajustables,
+              tiene funciones programables y garantiza una extracción uniforme y
+              sabrosa en cada taza.
+            </p>
+           
+          </div>
+        </div>
+        <a href="#" class="btn-1">inicio</a>
+      </main>
+        <!-- fin del servicio -->
   
 </body>
 </html>
