agregando media query

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style/cafe.css">
+    <link rel="icon" href="images/icon.ico" />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+  />
+    <link rel="stylesheet" href="style/cafe.css">
     <title>Cafe de la Geisha</title>
 </head>
 <body>
@@ -13,7 +18,7 @@
           <a href="#" class="logo"><img src="images/icon.ico" alt="" /></a>
           <input type="checkbox" id="menu" />
           <label for="menu">
-            <span class="material-symbols-outlined"> menu </span>
+            <span id="manu-cafe" class="material-symbols-outlined"> menu </span>
           </label>
           <nav class="navbar">
             <ul>
