finalizar // pc-escritorio

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   
             <div class="dir">
               <h3>Telefono</h3>
-              <p>1555555555</p>
+              <p>4698-0311</p>
             </div>
   
             <div class="dir">
@@ -90,7 +90,6 @@
             deliciosos hace que la cafetería se destaque y sea inolvidable.
           </p>
   
-          <!-- <a href="#" class="btn-1">Informacion</a> -->
         </div>
       </section>
       <!-- fin del welcome -->
@@ -111,7 +110,7 @@
   
         <div class="services-group">
           <div class="services-1">
-            <img src="images/logo-cafe.png" alt="" />
+            <img src="images/cafe.png" alt="" />
             <h3>Nuestro Cafe</h3>
             <p class="p-services">
               Nuestro café ha ganado reconocimiento como el mejor de la zona
@@ -148,6 +147,7 @@
           </div>
         </div>
         <a href="#principio" class="btn-1">inicio</a>
+        <hr>
       </main>
         <!-- fin del servicio -->
 
@@ -240,6 +240,7 @@
             </div>
           </div>
           <a href="#principio" class="btn-1">inicio</a>
+          <hr>
         </section>
           <!-- fin del precios -->
 
